# rs-async-zip

./: .gitignore  APPNOTE.md  Cargo.toml  LICENSE  README.md  SPECIFICATION.md  rustfmt.toml
.github/workflows/: ci-clippy.yml  ci-fmt.yml  ci-linux.yml  ci-mac.yml  ci-source.yml  ci-typos.yml  ci-wasm.yml  ci-windows.yml
examples/: actix_multipart.rs  cli_compress.rs  file_extraction.rs  fs_parallel_extract.rs  parallel_extract.rs  seek_extract.rs  seek_sequ_extract.rs
examples/actix_multipart/: Cargo.toml  README.md
examples/actix_multipart/src/: main.rs
examples/cli_compress/: Cargo.toml  README.md
examples/cli_compress/src/: main.rs
src/: consts.rs  date.rs  delim.rs  error.rs  header.rs  lib.rs  opts.rs  string.rs  utils.rs
src/base/: mod.rs
src/base/read/: fs.rs  mem.rs  mod.rs  seek.rs  stream.rs
src/base/read/io/: combined_record.rs  compressed.rs  entry.rs  hashed.rs  locator.rs  mod.rs  owned.rs
src/base/write/: compressed_writer.rs  entry_stream.rs  entry_whole.rs  mod.rs
src/base/write/io/: offset.rs
src/concurrent/: mod.rs
src/core/: cd.rs  cdr.rs  dd.rs  edf.rs  eocdr.rs  lfh.rs  mod.rs  wrap.rs
src/core/ops/: edfs.rs  mod.rs
src/core/raw/: cdr.rs  dd.rs  edf.rs  eocdr.rs  file.rs  lfh.rs  mod.rs
src/core/raw/zip64/: eocdl.rs  eocdr.rs  mod.rs
src/core/zip64/: eocdr.rs  locator.rs  mod.rs
src/date/: builder.rs  mod.rs
src/entry/: builder.rs  ext.rs  level.rs  mod.rs
src/file/: builder.rs  mod.rs
src/read/: concurrent.rs  fs.rs  mem.rs  mod.rs  reader.rs  seek.rs  stream.rs  sync.rs
src/read/io/: combined_record.rs  compressed.rs  entry.rs  hashed.rs  locator.rs  mod.rs  owned.rs
src/spec/: APPNOTE.md  attribute.rs  compression.rs  consts.rs  date.rs  delimiter.rs  extra_field.rs  header.rs  mod.rs  parse.rs  signature.rs  version.rs
src/spec/entry/: builder.rs  ext.rs  mod.rs
src/stream/: mod.rs
src/stream/read/: mod.rs
src/stream/write/: mod.rs
src/tests/: mod.rs
src/tests/read/: mod.rs
src/tests/read/compression/: bzip2.data  deflate.data  lzma.data  mod.rs  xz.data  zstd.data
src/tests/read/locator/: mod.rs
src/tests/read/zip64/: mod.rs
src/tests/spec/: date.rs  mod.rs
src/tests/write/: mod.rs
src/tests/write/offset/: mod.rs
src/tests/write/zip64/: mod.rs
src/tokio/: mod.rs
src/tokio/read/: fs.rs  mod.rs  seek.rs  stream.rs
src/tokio/write/: mod.rs
src/write/: compressed_writer.rs  entry_stream.rs  entry_whole.rs  mod.rs  offset_writer.rs
src/write/io/: mod.rs  offset.rs
tests/: compress_test.rs  decompress_test.rs
tests/common/: mod.rs
tests/test_inputs/sample_data/alpha/: back_to_front.txt  front_to_back.txt
tests/test_inputs/sample_data/numeric/: forward.txt  reverse.txt
