[package]
name = "async_zip"
version = "0.0.9"
edition = "2021"
authors = ["Harry [hello@majored.pw]"]
repository = "https://github.com/Majored/rs-async-zip"
description = "An asynchronous ZIP archive reading/writing crate."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/async_zip/"
homepage = "https://github.com/Majored/rs-async-zip"
keywords = ["async", "zip", "archive", "tokio"]
categories = ["asynchronous", "compression"]

[features]
full = ["date", "fs", "crc", "deflate", "bzip2", "lzma", "zstd", "xz"]

date = ["chrono"]
fs = ["tokio/fs"]
crc = []

deflate = ["async-compression/deflate"]
bzip2 = ["async-compression/bzip2"]
lzma = ["async-compression/lzma"]
zstd = ["async-compression/zstd"]
xz = ["async-compression/xz"]

[dependencies]
crc32fast = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-util"] }
pin-project = "1"

async-compression = { version = "0.3", default-features = false, features = ["tokio"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true}

[dev-dependencies]
# tests
tokio = { version = "1", features = ["full"] }

# shared across multiple examples
anyhow = "1"
sanitize-filename = "0.4"

# actix_mutlipart
actix-web = "4"
actix-multipart = "0.4"
futures = "0.3"
derive_more = "0.99"
uuid = { version = "1", features = ["v4", "serde"] } 

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
