[package]
name = "actix-multipart-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-rc.2"
async_zip = { git = "https://github.com/Majored/rs-async-zip", branch="main" } 
tokio = { version = "1", features = ["macros", "fs", "io-util"] }
actix-multipart = "0.4.0-beta.13"
sanitize-filename = "0.3.0"
futures = "0.3.19"
anyhow = "1.0.53"

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]
